ajust icon to weichat

--- a/olivertree/olivertree_test/WebContent/index.html
+++ b/olivertree/olivertree_test/WebContent/index.html
@@ -76,8 +76,7 @@
 			<div class="share">
 				<p>share:</p>
 				<a href="mailto:info@myolivetree.eu" title="email" class="mail"></a>
-				<a href="https://facebook.com/myolivetree.eu" title="facebook" target="_blank" class="tw"></a>
-				<a href="https://twitter.com/MyOliveTreeGr" title="twitter" target="_blank" class="fb"></a>
+				<a href="https://twitter.com/MyOliveTreeGr" title="weichat" target="_blank" class="fb"></a>
 			</div>
 			<div class="lang">
 				<a class="gr" href="gr">GR</a>
